--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <audio id="audio" style="display:none"></audio>
 </div>
 <script>
-    const SERVER = window.location.origin + '/api';
+    const SERVER = '/api';
     const txt=document.getElementById('txt');
     const spdSlider=document.getElementById('spdSlider');
     const audio=document.getElementById('audio');
