--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <audio id="audio" style="display:none"></audio>
 </div>
 <script>
-    const SERVER = '/api';
+    const SERVER = '/api/generate';
     const txt=document.getElementById('txt');
     const spdSlider=document.getElementById('spdSlider');
     const audio=document.getElementById('audio');
@@ -278,7 +278,7 @@
         document.getElementById('genTxt').innerHTML='<i class="fas fa-spinner fa-spin"></i> Generating...';
 
         try{
-            const res=await fetch(`${SERVER}/generate`,{
+            const res=await fetch(SERVER,{
                 method:'POST',
                 headers:{'Content-Type':'application/json'},
                 body:JSON.stringify({
