--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
     <audio id="audio" style="display:none"></audio>
 </div>
 <script>
-    const SERVER = '/api/generate';
+    // În index.html din folderul VoiceStudio
+    const SERVER = '/apps/VoiceStudio/api/generate';
     const txt=document.getElementById('txt');
     const spdSlider=document.getElementById('spdSlider');
     const audio=document.getElementById('audio');
