--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
     <audio id="audio" style="display:none"></audio>
 </div>
 <script>
-    const SERVER='http://localhost:3000/api';
+    const SERVER='/api';
     const txt=document.getElementById('txt');
     const spdSlider=document.getElementById('spdSlider');
     const audio=document.getElementById('audio');
